srcFields and dstFields must have identical count

--- a/japanese/config.json
+++ b/japanese/config.json
@@ -1,6 +1,6 @@
 {
     "noteTypes": ["japanese"],
     "srcFields": ["Expression", "Kanji"],
-    "dstFields": ["Reading"],
+    "dstFields": ["Reading", "Reading"],
     "furiganaSuffix": " (furigana)"
 }
