--- a/mypy.ini
+++ b/mypy.ini
@@ -28,3 +28,5 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 [mypy-stringcase]
 ignore_missing_imports = True
+[mypy-gtts]
+ignore_missing_imports = True
