--- a/mypy.ini
+++ b/mypy.ini
@@ -1,8 +1,9 @@
 [mypy]
-python_version = 3.7
+python_version = 3.8
 pretty = true
 no_strict_optional = true
 show_error_codes = true
+exclude = gtts_player
 
 [mypy-win32file]
 ignore_missing_imports = True
