Check untyped defs; add script to update wheels

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,9 +1,10 @@
 [mypy]
-python_version = 3.8
+python_version = 3.9
 pretty = true
 no_strict_optional = true
 show_error_codes = true
 exclude = gtts_player
+check_untyped_defs = true
 
 [mypy-win32file]
 ignore_missing_imports = True
