--- a/mypy.ini
+++ b/mypy.ini
@@ -5,6 +5,7 @@ no_strict_optional = true
 show_error_codes = true
 exclude = gtts_player
 check_untyped_defs = true
+disallow_untyped_defs = True
 
 [mypy-win32file]
 ignore_missing_imports = True
