--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,8 +1,3 @@
 [settings]
+profile=black
 skip=fastbar,archive,vendor
-multi_line_output=3
-include_trailing_comma=True
-force_grid_wrap=0
-use_parentheses=True
-line_length=88
-ensure_newline_before_comments=true
